# chaffra

./: .chaffra.toml.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  action.yml
.github/: CODEOWNERS  coverage-policy.toml
.github/workflows/: ci.yml
ci/: gitlab-ci.yml
crates/chaffra-ai-quality/: Cargo.toml
crates/chaffra-ai-quality/src/: lib.rs
crates/chaffra-arch/: Cargo.toml
crates/chaffra-arch/src/: lib.rs  presets.rs  scc.rs
crates/chaffra-audit/: Cargo.toml
crates/chaffra-audit/src/: lib.rs
crates/chaffra-autofix/: Cargo.toml
crates/chaffra-autofix/src/: conflict.rs  engine.rs  hooks.rs  lib.rs
crates/chaffra-cicd-security/: Cargo.toml
crates/chaffra-cicd-security/src/: compose.rs  detect.rs  dockerfile.rs  github_actions.rs  gitlab_ci.rs  lib.rs  systemd.rs
crates/chaffra-cli/: Cargo.toml  chaffra-telemetry.json
crates/chaffra-cli/src/: lsp.rs  main.rs  watch.rs
crates/chaffra-cli/tests/: cli_binary_test.rs  integration_test.rs  phase4_integration_test.rs  telemetry_integration_test.rs
crates/chaffra-complexity/: Cargo.toml
crates/chaffra-complexity/src/: lib.rs
crates/chaffra-core/: Cargo.toml
crates/chaffra-core/src/: config.rs  diagnostic.rs  error.rs  grpc.rs  lib.rs  module.rs  telemetry.rs
crates/chaffra-core/src/grpc/: convert.rs
crates/chaffra-deadcode/: Cargo.toml
crates/chaffra-deadcode/src/: lib.rs
crates/chaffra-duplication/: Cargo.toml
crates/chaffra-duplication/src/: lib.rs  tokenizer.rs
crates/chaffra-frameworks/: Cargo.toml
crates/chaffra-frameworks/src/: detect.rs  go.rs  lib.rs  python.rs
crates/chaffra-health/: Cargo.toml
crates/chaffra-health/src/: lib.rs
crates/chaffra-hotspot/: Cargo.toml
crates/chaffra-hotspot/src/: lib.rs
crates/chaffra-impact/: Cargo.toml
crates/chaffra-impact/src/: lib.rs
crates/chaffra-llm-defense/: Cargo.toml
crates/chaffra-llm-defense/src/: lib.rs
crates/chaffra-management/: Cargo.toml
crates/chaffra-management/src/: api.rs  dashboard_html.rs  lib.rs  server.rs
crates/chaffra-mcp/: Cargo.toml
crates/chaffra-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/chaffra-mcp/tests/: config_fail_closed.rs
crates/chaffra-migrate/: Cargo.toml
crates/chaffra-migrate/src/: converters.rs  lib.rs
crates/chaffra-monorepo/: Cargo.toml
crates/chaffra-monorepo/src/: detect.rs  lib.rs
crates/chaffra-output/: Cargo.toml
crates/chaffra-output/src/: annotations.rs  badge.rs  codeclimate.rs  json.rs  lib.rs  markdown.rs  pr_comment.rs  sarif.rs  terminal.rs
crates/chaffra-parse/: Cargo.toml
crates/chaffra-parse/src/: discovery.rs  graph.rs  lib.rs  parser.rs  suppression.rs  symbols.rs
crates/chaffra-plugin/: Cargo.toml
crates/chaffra-plugin/src/: client.rs  config.rs  error.rs  host.rs  lib.rs  proto.rs
crates/chaffra-proto/: Cargo.toml  build.rs
crates/chaffra-proto/src/: lib.rs
crates/chaffra-security/: Cargo.toml
crates/chaffra-security/src/: deps.rs  lib.rs  sast.rs  secrets.rs
crates/chaffra-telemetry/: Cargo.toml  chaffra-telemetry.json
crates/chaffra-telemetry/src/: audit_log.rs  cache_metrics.rs  churn.rs  collector.rs  config.rs  dashboard.rs  error.rs  grpc_service.rs  lib.rs  lifecycle.rs  live_state.rs  metrics.rs  module.rs  sampling.rs  seed.rs
crates/chaffra-telemetry/src/backends/: cloudwatch.rs  json_file.rs  mod.rs  otlp.rs  prometheus.rs  statsd.rs  stderr.rs
crates/chaffra-tui/: Cargo.toml
crates/chaffra-tui/src/: app.rs  lib.rs  render.rs
crates/chaffra-types/: Cargo.toml
crates/chaffra-types/src/: lib.rs
docs/api/: impact.md  lsp-capabilities.md  management.md  mcp-tools.md  migrate.md  module-developer-guide.md  module-discovery.md  module-interface.md  monorepo.md  tui.md  vscode-extension.md  writing-external-modules.md
docs/api/modules/: ai-quality.md  architecture.md  audit.md  autofix.md  cicd-security.md  complexity.md  dead-code.md  duplication.md  frameworks.md  hotspot.md  llm-defense.md  parse.md  security.md  telemetry.md
proto/chaffra/module/v1/: module.proto
proto/chaffra/plugin/v1/: plugin.proto
scripts/: coverage_check.py
scripts/tests/: .coveragerc  test_coverage_check.py
scripts/tests/fixtures/integration/: config_base.rs  config_head.rs  lcov.info  policy.toml  staged_generated.rs  staged_lcov.info
scripts/tests/fixtures/powerset_crate/: Cargo.toml
scripts/tests/fixtures/powerset_crate/src/: lib.rs
tests/fixtures/cicd/: .gitlab-ci.yml  Dockerfile  Dockerfile.secure  docker-compose.yml  myapp.service  secure.service
tests/fixtures/cicd/.github/workflows/: insecure.yml  secure.yml
tests/fixtures/go/ai-quality/: main.go
tests/fixtures/go/arch/domain/: user.go
tests/fixtures/go/arch/infrastructure/: repo.go
tests/fixtures/go/arch/presentation/: handler.go
tests/fixtures/go/boundaries/handler/: user.go
tests/fixtures/go/boundaries/repo/: user.go
tests/fixtures/go/boundaries/service/: user.go
tests/fixtures/go/clones/: handler_a.go  handler_b.go
tests/fixtures/go/cobra/: root.go
tests/fixtures/go/complex/: handler.go
tests/fixtures/go/duplicates/: a.go  b.go
tests/fixtures/go/echo/: main.go
tests/fixtures/go/gin/: main.go
tests/fixtures/go/llm-defense/: agent.go
tests/fixtures/go/simple/: main.go  utils.go
tests/fixtures/java/simple/: Main.java  StringUtils.java
tests/fixtures/monorepo/go/: go.work
tests/fixtures/monorepo/js/: package.json
tests/fixtures/python/ai-quality/: app.py
tests/fixtures/python/aliases/: app.py
tests/fixtures/python/clones/: processor_a.py  processor_b.py
tests/fixtures/python/django/: urls.py  views.py
tests/fixtures/python/fastapi/: app.py
tests/fixtures/python/flask/: app.py
tests/fixtures/python/llm-defense/: bot.py
tests/fixtures/python/simple/: app.py  utils.py
tests/fixtures/security/clean/: app.py  handler.go
tests/fixtures/security/nested/: .env
tests/fixtures/security/vulnerable/: app.py  config.go  go.mod  handler.go  requirements.txt
tests/fixtures/typescript/simple/: app.ts  utils.ts
