[workspace]
resolver = "2"
members = [
    "crates/chaffra-core",
    "crates/chaffra-parse",
    "crates/chaffra-deadcode",
    "crates/chaffra-complexity",
    "crates/chaffra-health",
    "crates/chaffra-duplication",
    "crates/chaffra-arch",
    "crates/chaffra-hotspot",
    "crates/chaffra-audit",
    "crates/chaffra-security",
    "crates/chaffra-cicd-security",
    "crates/chaffra-output",
    "crates/chaffra-mcp",
    "crates/chaffra-plugin",
    "crates/chaffra-frameworks",
    "crates/chaffra-ai-quality",
    "crates/chaffra-llm-defense",
    "crates/chaffra-monorepo",
    "crates/chaffra-impact",
    "crates/chaffra-migrate",
    "crates/chaffra-autofix",
    "crates/chaffra-tui",
    "crates/chaffra-types",
    "crates/chaffra-proto",
    "crates/chaffra-telemetry",
    "crates/chaffra-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/laplaque/chaffra"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
gix = { version = "0.72", default-features = false, features = ["max-performance-safe"] }
tonic = "0.14"
prost = "0.14"
glob = "0.3"
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
serde_yaml_ng = "0.10"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-full = "0.5"
lsp-types = "0.97"
tower = "0.5"

chaffra-core = { path = "crates/chaffra-core" }
chaffra-parse = { path = "crates/chaffra-parse" }
chaffra-deadcode = { path = "crates/chaffra-deadcode" }
chaffra-complexity = { path = "crates/chaffra-complexity" }
chaffra-health = { path = "crates/chaffra-health" }
chaffra-duplication = { path = "crates/chaffra-duplication" }
chaffra-arch = { path = "crates/chaffra-arch" }
chaffra-hotspot = { path = "crates/chaffra-hotspot" }
chaffra-audit = { path = "crates/chaffra-audit" }
chaffra-output = { path = "crates/chaffra-output" }
chaffra-mcp = { path = "crates/chaffra-mcp" }
chaffra-cicd-security = { path = "crates/chaffra-cicd-security" }
chaffra-plugin = { path = "crates/chaffra-plugin" }
chaffra-security = { path = "crates/chaffra-security" }
chaffra-frameworks = { path = "crates/chaffra-frameworks" }
chaffra-ai-quality = { path = "crates/chaffra-ai-quality" }
chaffra-llm-defense = { path = "crates/chaffra-llm-defense" }
chaffra-monorepo = { path = "crates/chaffra-monorepo" }
chaffra-impact = { path = "crates/chaffra-impact" }
chaffra-migrate = { path = "crates/chaffra-migrate" }
chaffra-autofix = { path = "crates/chaffra-autofix" }
chaffra-tui = { path = "crates/chaffra-tui" }
chaffra-types = { path = "crates/chaffra-types" }
chaffra-proto = { path = "crates/chaffra-proto" }
chaffra-telemetry = { path = "crates/chaffra-telemetry" }
