[package]
name = "chaffra-ai-quality"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI-generated code quality analysis: hallucinated APIs, phantom security, unfinished stubs"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
