[package]
name = "chaffra-arch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Architecture boundary validation with built-in presets (layered, hexagonal, feature-sliced, clean)"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
