[package]
name = "chaffra-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PR risk assessment: baselines, new-only vs all-issues gating, and pass/fail verdicts"

[dependencies]
chaffra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
