[package]
name = "chaffra-autofix"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Automated fix orchestration: collect fixable findings, apply edits atomically"

[dependencies]
chaffra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
