[package]
name = "chaffra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for chaffra codebase intelligence"

[[bin]]
name = "chaffra"
path = "src/main.rs"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
chaffra-deadcode = { workspace = true }
chaffra-complexity = { workspace = true }
chaffra-health = { workspace = true }
chaffra-duplication = { workspace = true }
chaffra-arch = { workspace = true }
chaffra-hotspot = { workspace = true }
chaffra-audit = { workspace = true }
chaffra-security = { workspace = true }
chaffra-output = { workspace = true }
chaffra-mcp = { workspace = true }
chaffra-plugin = { workspace = true }
chaffra-frameworks = { workspace = true }
chaffra-ai-quality = { workspace = true }
chaffra-llm-defense = { workspace = true }
chaffra-monorepo = { workspace = true }
chaffra-impact = { workspace = true }
chaffra-migrate = { workspace = true }
chaffra-autofix = { workspace = true }
chaffra-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
tempfile = "3"
