[package]
name = "chaffra-complexity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cyclomatic and cognitive complexity metrics computed from ASTs"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
