[package]
name = "chaffra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Diagnostic types, configuration, and severity model shared across all chaffra crates"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chaffra-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tower = "0.5"
