[package]
name = "chaffra-impact"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Impact tracking: snapshots, trend analysis, and catch rate metrics"

[dependencies]
chaffra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
