[package]
name = "chaffra-llm-defense"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM defense analysis: prompt injection, unsafe tool use, missing output validation"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
