[package]
name = "chaffra-management"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Embedded management HTTP server with web dashboard and REST API for chaffra"

[dependencies]
chaffra-core = { workspace = true }
chaffra-telemetry = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tempfile = "3"
