[package]
name = "chaffra-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model Context Protocol server exposing chaffra analysis to AI coding assistants"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
chaffra-deadcode = { workspace = true }
chaffra-complexity = { workspace = true }
chaffra-telemetry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
