[package]
name = "chaffra-monorepo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Monorepo workspace detection and per-workspace analysis scoping"

[dependencies]
chaffra-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
