[package]
name = "chaffra-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gRPC plugin host and protocol definitions for third-party framework extensions"

[dependencies]
chaffra-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
http = "1"
http-body-util = "0.1"
bytes = "1"
tower = { version = "0.5", features = ["util"] }
