[package]
name = "chaffra-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SAST, secret scanning, and dependency CVE analysis"

[dependencies]
chaffra-core = { workspace = true }
chaffra-parse = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
