[package]
name = "chaffra-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Telemetry collection, aggregation, and backend sinks for chaffra analysis"

[features]
default = []
cloudwatch = []

[dependencies]
chaffra-core = { workspace = true }
chaffra-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
