[package]
name = "chaffra-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Terminal UI for browsing and acting on chaffra findings"

[dependencies]
chaffra-core = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
serde = { workspace = true }

[dev-dependencies]
