[package]
name = "chaffra-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Published typed output contract for downstream consumers of chaffra analysis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
